--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,62 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <style>
+    .wrapper{
+    position:absolute;
+    top:0px;
+    width: 80%;
+    height:100%;
+    margin-left: 10%;
+    background-color:black;
+    box-shadow: 0px 12px 30px 0px rgba(0,0,0,0.2);
+    }
+
+    .inner_wrapper{
+    top:0px;
+    position:absolute;
+    width:97.5%;
+    height:100%;
+    margin-left: 0.25%;
+    margin-right: 0.25%;
+    background-color:white;
+    padding-left: 1%;
+    padding-right:1%;
+    }
+
+    .body{
+    top:0px;
+    background-color:grey;
+    }
+
+    .header{
+    background-color:black;
+    position:absolute;
+    width:85%;
+    margin-left:7.5%;
+    height:20%;
+    top:0px;
+    border-radius: 0px 0px 50px 50px;
+    box-shadow: 0px 12px 30px 0px rgba(0,0,0,0.2);
+    z-index:10;
+    }
+
+
+
+
+
+    </style>
 <title>Dynatrace Support Lab Landing Page</title>
 </head>
 
 <body>
-Content
-{{ dict_configData["test"] }}
+<div class="header"></div>
 
+<div class="wrapper">
+    <div class="inner_wrapper">
+        {{ dict_configData["test"] }}
+    </div>
+</div>
 
 </body>
 </html>
