--- a/templates/index.html
+++ b/templates/index.html
@@ -8,25 +8,29 @@
         position: absolute;
         top:50px;
         width: 80%;
-        height: 105%;
         margin-left: 10%;
         background-color:black;
         box-shadow: 0px 12px 30px 0px rgba(0,0,0,0.2);
+        display:block;
+        overflow:auto;
+        overflow-x: hidden;
     }
 
     .inner_wrapper{
         top:0px;
-        position:absolute;
-        height: 100%;
+        position:relative;
         width:97.5%;
         margin-left: 0.25%;
         margin-right: 0.25%;
         background-color:white;
         padding-left: 1%;
         padding-right:1%;
-        overflow:visible;
+        overflow:auto;
+        overflow-x: hidden;
+        display:block;
     }
     .body{
+        height:100%;
         font-family: 'Montserrat', sans-serif;
         top:0px;
         background-color:grey;
@@ -80,6 +84,7 @@
         top:-10px;
         left:1.5%;
         padding:10px;
+        display:block;
     }
     .description{
         font-size:12px;
@@ -106,6 +111,7 @@
 
     <div class="wrapper">
         <div class="inner_wrapper">
+            <div class="floating_wrapper">
 
             <ul>
                 {% for x in dict_configData: %}
@@ -120,6 +126,7 @@
                 {% endfor %}
 
             </ul>
+            </div>
         </div>
     </div>
 </div>
